manifests/ingresses/exercises-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercises-shared-ingress
  namespace: exercises

spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2345
          - path: /randomstrings/strings
            pathType: Prefix
            backend:
              service:
                name: randomstrings-svc
                port:
                  name: reader
          - path: /randomstrings
            pathType: Prefix
            backend:
              service:
                name: randomstrings-svc
                port:
                  name: generator
